<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.HomeFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:contentDescription="@string/logo"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_media" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:fontFamily="@font/rubic_variabel"
        android:text="@string/helo"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_userr"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/bg_edit_search"
        android:fontFamily="@font/rubic_variabel"
        android:hint="@string/hint_search"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:autofillHints=""
        android:inputType="text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/banner" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginStart="46dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_klinik" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:layout_marginStart="46dp"
                            android:fontFamily="@font/rubic_medium"
                            android:text="@string/klinik_terdekat"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_menu2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:fontFamily="@font/rubic_medium"
                            android:gravity="center"
                            android:text="@string/riwayat"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_data" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:fontFamily="@font/rubic_medium"
                            android:text="@string/data_scan"
                            android:textSize="10sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginStart="46dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_notifikasi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:layout_marginStart="46dp"
                            android:fontFamily="@font/rubic_medium"
                            android:text="@string/klinik_terdekat"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_nilai" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:fontFamily="@font/rubic_medium"
                            android:gravity="center"
                            android:text="@string/riwayat"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_marginTop="21dp"
                            android:src="@drawable/ic_pengaturan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:fontFamily="@font/rubic_medium"
                            android:text="@string/data_scan"
                            android:textSize="10sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/iv_slider"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_period="1000"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="MissingConstrain" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_slider"
                tools:listitem="@layout/item_berita" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>